# ominix-runtime

./: CMakeLists.txt  CMakePresets.json  README.md
include/: llama.h
ominix/: CMakeLists.txt
ominix/openvla/: CMakeLists.txt  build_graph.cpp  build_graph.h  ctx_manager.cpp  ctx_manager.h  examples.cpp  export_openvla7b.py  hftokenizer.hpp  infer_session.hpp  interface.cpp  llm.cpp  llm.h  main.cpp  model_defs.cpp  model_defs.h  model_loader.cpp  model_loader.h  openvla.cpp  openvla.h  proj.hpp  reg.hpp  test_openvla.py  timer.hpp  utils.cpp  utils.h  vit.hpp
src/: llama-batch.cpp  llama-context.cpp  llama-context.h
tools/: CMakeLists.txt
